# superpos-agent-core

./: README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/slim_agent_core/: module_setup.py  recent_tasks.py  runtime_config.py  session_store.py  superpos_client.py  superpos_poller.py  worktree_manager.py
src/superpos_agent_core/: __init__.py  ask_user.py  config.py  executor.py  github_auth.py  knowledge.py  main.py  module_loader.py  module_setup.py  persona_overlay.py  redactor.py  (+15 more)
tests/: test_ask_user.py  test_executor_cancel.py  test_github_auth.py  test_github_module_script.py  test_hosted_agents_module_script.py  test_issues_module_script.py  test_knowledge_client.py  test_knowledge_module_script.py  test_module_loader_bundled.py  test_persona_overlay.py  test_progress_reporter.py  test_registry_module_script.py  test_registry_overlay.py  test_registry_sync.py  test_session_store.py  test_setup_logging.py  test_skills_loader.py  test_sub_agent_sync.py  test_sub_agent_sync_memory.py  test_superpos_client_attachments.py  test_superpos_client_github.py  test_superpos_client_hosted_agents.py  test_superpos_client_issues.py  test_superpos_client_knowledge.py  test_superpos_client_persona_assembled.py  test_superpos_client_registry.py  test_superpos_client_registry_authoring.py  test_superpos_client_surface_fill.py  test_superpos_client_task_list.py  test_superpos_client_task_update.py  test_superpos_client_tracks.py  test_superpos_client_workflows.py  test_superpos_poller_knowledge.py  test_superpos_poller_persona_overlay.py  test_superpos_poller_resync.py  test_superpos_task_list_show.py  test_superpos_task_memory_write.py  test_superpos_task_self_target.py  test_superpos_task_update_cli.py  test_task_cli_doc.py  (+3 more)
(+27 files in other folders)
