[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slim-agent-core"
version = "0.1.0"
description = "Shared runtime for Superpos slim agents (Telegram bot, Superpos poller, worktree manager, telegram streamer)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Superpos" }]
dependencies = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
slim_agent_core = ["py.typed"]
